--- a/index.html
+++ b/index.html
@@ -18,4 +18,9 @@
 		margin:0 auto;
 		/*border:1px solid #000;*/
 	}
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar{
+    width:0;
+    height:0;
+  }
 </style>
